remove 1 unused level of mrilite

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7d8a99f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example data is from the Individual Brain Charting dataset (OpenNeuro ds000244, CC0 license)\n",
-    "img_path = \"/Volumes/BACH2TB/Datasets/open_ms_data/cross_sectional/coregistered_resampled/patient01/T1W.nii.gz\"\n",
-    "seg_path = \"/Volumes/BACH2TB/Datasets/open_ms_data/cross_sectional/coregistered_resampled/patient01/consensus_gt.nii.gz\"\n",
+    "# Example data is from the Individual Brain Charting dataset (OpenNeuro ds000244, CC0 license), patient 1\n",
+    "img_path = \"img/T1W.nii.gz\"\n",
+    "seg_path = \"img/consensus_gt.nii.gz\"\n",
     "\n",
     "img = load_nifti(img_path)\n",
     "seg = load_nifti(seg_path)\n",
@@ -141,9 +141,9 @@
    ],
    "source": [
     "volumnes = {\n",
-    "    \"T1W\": load_nifti(\"/Volumes/BACH2TB/Datasets/open_ms_data/cross_sectional/coregistered_resampled/patient01/T1W.nii.gz\"),\n",
-    "    \"T2W\": load_nifti(\"/Volumes/BACH2TB/Datasets/open_ms_data/cross_sectional/coregistered_resampled/patient01/T2W.nii.gz\"),\n",
-    "    \"FLAIR\": load_nifti(\"/Volumes/BACH2TB/Datasets/open_ms_data/cross_sectional/coregistered_resampled/patient01/FLAIR.nii.gz\"),\n",
+    "    \"T1W\": load_nifti(\"img/T1W.nii.gz\"),\n",
+    "    \"T2W\": load_nifti(\"img/T2W.nii.gz\"),\n",
+    "    \"FLAIR\": load_nifti(\"img/FLAIR.nii.gz\"),\n",
     "}\n",
     "show_modalities(volumnes, axis=1, index=100)"
    ]
